feat: Add scripts for local asset setup and HTML link updates
- Implemented setup-local-assets.ps1 to download Bootstrap, jQuery, Bootstrap Icons, and Poppins, saving them in /public/vendor/ and updating HTML files accordingly.
- Created update-html-links.ps1 to replace CDN links with local paths in specified HTML files.
- Added SQL scripts for testing model updates and verifying column existence in the database.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     build: . # Construye la imagen usando el Dockerfile en el directorio actual
     restart: always
     ports:
-      - "3000:3000" # Mapea el puerto 3000 de tu PC al puerto 3000 del contenedor
+      - "3211:3111" # Mapea el puerto 3211 (frontend) al puerto 3111 (backend) del contenedor
     volumes:
       - .:/usr/src/app # Sincroniza tu código local con el del contenedor para desarrollo
       - /usr/src/app/node_modules # Evita que tu node_modules local sobreescriba el del contenedor
